--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>padmakumari</groupId>
   <artifactId>jayasri</artifactId>
-  <version>28Apr1989</version>
+  <version>28041989</version>
 
   <name>calculator_addition</name>
 
